<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Start screen-->
    <string name="app_name">Chess Master</string>
    <string name="action_settings">Settings</string>
    <string name="action_player_search_screen">PS</string>
    <string name="action_game_search_screen">GS</string>
    <string name="start_screen_player_search_button">Search Player</string>
    <string name="start_screen_game_search_button">Search Game</string>
    <string name="null_value">null</string>

    <!--compare screen -->
    <string name="compare_screen_result">Result:</string>
    <string name="compare_screen_result_white">White</string>
    <string name="compare_screen_result_black">Black</string>
    <string name="compare_screen_result_draw">Draw</string>
    <string name="compare_screen_rating">Rating:</string>
    <string name="compare_screen_rating_min">min</string>
    <string name="compare_screen_rating_max">max</string>
    <string name="compare_screen_rating_checkedbox_at_least_one">at least one</string>
    <string name="compare_screen_rating_checkedbox_both">both</string>
    <string name="compare_screen_search_button">Search</string>

    <!--game search screen -->
    <string name="game_search_screen_result">Result:</string>
    <string name="game_search_screen_result_white">White</string>
    <string name="game_search_screen_result_black">Black</string>
    <string name="game_search_screen_result_draw">Draw</string>
    <string name="game_search_screen_rating">Rating:</string>
    <string name="game_search_screen_rating_min">min</string>
    <string name="game_search_screen_rating_max">max</string>
    <string name="game_search_screen_whiteopening">White opening</string>
    <string name="game_search_screen_whiteopening_1st">1st</string>
    <string name="game_search_screen_whiteopening_2nd">2nd</string>
    <string name="game_search_screen_whiteopening_3rd">3rd</string>
    <string name="game_search_screen_blackopening">Black opening</string>
    <string name="game_search_screen_blackopening_1st">1st</string>
    <string name="game_search_screen_blackopening_2nd">2nd</string>
    <string name="game_search_screen_blackopening_3rd">3rd</string>
    <string name="game_search_screen_eco">Eco:</string>
    <string name="game_search_screen_button_search">Search</string>

    <!--player search screen-->
    <string name="player_search_screen">Search by LastName</string>
    <string name="player_search_screen_search_button">Search</string>

    <!--player profile screen-->
    <string name="player_profile_screen_player_name">Name:</string>
    <string name="player_profile_screen_player_rating">Recent Rating:</string>
    <string name="player_profile_screen_player_number_of_game">#Games:</string>
    <string name="player_profile_screen_player_number_of_game_textView">23</string>
    <string name="player_profile_screen_player_white_opening">White opening pref.:</string>
    <string name="player_profile_screen_player_white_opening_symbol">#</string>
    <!--Game search Result List screen-->

    <!--Game Detail screen-->
    <string name="game_detail_screen_player_black">Black:</string>
    <string name="game_detail_screen_player_white">White:</string>
    <string name="game_detail_screen_compare_button">Compare</string>
    <string name="game_detail_screen_result">Result:</string>
</resources>
