<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/FSS_game_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:background="@drawable/btnborder"
        android:text="@string/start_screen_game_search_button"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/FSS_player_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:background="@drawable/btnborder"
        android:text="@string/start_screen_player_search_button"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:background="@drawable/icon"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

</FrameLayout>